--- a/src/app/pages/atendimento/consulta-paciente/consulta-paciente.component.html
+++ b/src/app/pages/atendimento/consulta-paciente/consulta-paciente.component.html
@@ -214,10 +214,10 @@
                                       
                                       <!-- Outros conteúdos do atendimento aqui -->
                                     <!-- Fim do conteúdo colapsável -->
-                                  
+                                    
                                   
                                 <!-- Exibe a primeira div quando this.hasSpecial for true -->
-                                <div *ngIf="!this.hasSpecial" class="form-row align-items-center">
+                                <div  class="form-row align-items-center">
                                     <div class="col-lg-12">
                                       <div class="input-box input-medica">
                                         <div class="d-flex justify-content-between">
@@ -236,11 +236,11 @@
                                   </div>
 
                                 <!-- Exibe a segunda div quando this.hasSpecial for false -->
-                                <div *ngIf="this.hasSpecial" class="form-row align-items-center">
+                                <div *ngIf="this.hasSpecial"  class="form-row align-items-center">
                                     <div class="col-lg-12">
                                         <div class="input input-medica">
-                                            <label for="detalhesInterno"><h6>Detalhes (Interno)*:</h6></label>
-                                            <div [innerHtml]="html_string"></div>
+                                            <label for="detalhesInterno" ><h6>Histórico Importado</h6></label>
+                                            <div [innerHtml]="html_string" id="detalhesInterno"></div>
                                         </div>
                                     </div>
                                 </div>
