--- a/src/app/pages/atendimento/novo-atendimento/novo-atendimento.component.html
+++ b/src/app/pages/atendimento/novo-atendimento/novo-atendimento.component.html
@@ -184,7 +184,7 @@
                                                             
                                 <div *ngIf="isConfAtendimento">
                                     <div class="form-row align-items-center">
-                                        <div class="form-group col-md-4">
+                                        <div class="form-group col-md-3">
                                             <div class="form-group">
                                                 <label for="horarioSelected">Horário Selecionado:</label>
                                                 <input class="form-control" name="horarioSelected" id="horarioSelected "
@@ -192,7 +192,7 @@
                                             </div>
                                         </div>
                                     
-                                        <div class="form-group col-md-4">
+                                        <div class="form-group col-md-3">
                                             <div class="form-group">
                                                 <label for="nomeResponsavel">Informe o CPF do Paciente/Responsável*</label>
                                                 <input class="form-control" name="cpf" id="cpf" type="text"
@@ -200,11 +200,43 @@
                                                     placeholder="000.000.000-00" />
                                             </div>
                                         </div>
-                                        <div class="form-group col-md-4 text-right">
+
+                                        <div class="form-group col-md-3">
+                                            <div class="form-group">
+                                                <label for="nomeResponsavel">Informe o Nome do Paciente/Responsável*</label>
+                                                <input class="form-control" name="nome" id="nome" type="text"
+                                                    formControlName="nome" placeholder="Informe o Nome para Consulta"/>
+                                            </div>
+                                        </div>
+                                        <div class="form-group col-md-3 text-right">
                                             <button class="btn btn-primary m-4" 
                                                 (click)="isValidCpf(formNovoAtendimento.value)">
                                                 Pesquisar
                                             </button>
+                                        </div>
+                                        <div class="col-md-4" *ngFor="let row of rowData">
+                                            <nb-card>
+                                                <nb-card-body class="card" *ngIf="isbuscarNome">
+                                                    <div class="text-center">
+                                                        <img src="{{row.avatar}}" style="height: 55px; border-radius: 50%;">
+                                                    </div>
+                                                    <p class="card-text">Paciente: {{ row?.nameChild || row.name }}</p>
+                                                    <p class="card-text" *ngIf="row?.nameChild">Responsável: {{ row?.name }}</p>
+                                                    <p class="card-text" *ngIf="!row?.nameChild"> </p> <!-- Mantém a quebra de linha -->
+
+                                                    <p class="card-text">Telefone: {{ row.cellPhone }}</p> 
+                                                    <p class="card-text">Email: {{ row.email }}</p>
+                                                    <p class="card-text">CPF: {{ row.federalId }}</p>
+                                                    
+                                                    
+                
+                                                    <div class="datatable-body-box-actions">
+                                                        <button class="btn btn-success" size="small" (click)="SelecionarPaciente(row)">
+                                                            Selecionar
+                                                          </button>
+                                                    </div>                                  
+                                                </nb-card-body>
+                                            </nb-card>
                                         </div>
                                         <div class="form-group col-md-12" *ngIf="isDadosAtendimento">
                                             <div class="form-row">
@@ -250,14 +282,15 @@
                                             </div>
                                             <div class="form-group col-md-4" *ngIf="isDependente">
                                                 <label for="incluirDep">Informe o Dependente</label>
-                                                <select class="form-control" formControlName="incluirDep"
+                                                <select class="form-control" formControlName="incluirDep" id="incluirDep"
                                                     (change)="verificaDependente($event.target.value)">
                                                     <option value="null" selected>SELECIONE</option>
-                                                    <option *ngFor="let pagto of listDependente"
-                                                        value="{{ pagto.idChild }}">
-                                                        {{pagto.name}}</option>
+                                                    <option *ngFor="let incluirDep of listDependente" value="{{ incluirDep.idChild }}"> 
+                                                        {{ incluirDep.name }}
+                                                    </option>
                                                 </select>
                                             </div>
+                                            
                                             <div class="col-md-4">
                                                 <div class="form-group">
                                                     <label class="consultaAntecipada">Paciente Deseja Antecipar Data?</label>
