--- a/src/app/pages/gestao-paciente/novo-paciente/novo-paciente.component.html
+++ b/src/app/pages/gestao-paciente/novo-paciente/novo-paciente.component.html
@@ -1,3 +1,4 @@
+<div class="loader" *ngIf="isLoader"></div>
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12 col-xs-12">
@@ -87,7 +88,8 @@
                         </div>
                           <div class="form-group col-md-4">
                             <label for="nome">Nome*</label>
-                            <input class="form-control" name="nome" id="nome" type="text" formControlName="nome" />
+                            <input class="form-control" name="nome" id="nome" type="text" formControlName="nome"
+                            (change)="nameMae($event.target.value)" />
                           </div>
                           <div class="form-group col-md-2">
                             <label for="CPF">CPF*</label>
