--- a/src/app/pages/gestao-paciente/paciente/paciente.component.html
+++ b/src/app/pages/gestao-paciente/paciente/paciente.component.html
@@ -10,7 +10,7 @@
                   <h5 class="ml-lg-n3">Consulta de Paciente</h5>
               </div>
               <div class="form-row align-items-center">
-                  <div class="form-group col-md-3">
+               <!--   <div class="form-group col-md-3">
                       <label for="medico">Informe o Médico </label>
                       <select class="form-control" id="medico" formControlName="medico">
                           <option value="" selected>Selecione o Médico</option>
@@ -18,16 +18,16 @@
                               {{ medico.name }}
                           </option>
                       </select>
-                  </div>
-                  <div class="form-group col-md-3">
+                  </div>-->
+                  <div class="form-group col-md-4">
                       <label for="cpf">CPF</label>
                       <input class="form-control" name="cpf" id="cpf" type="text" formControlName="cpf" placeholder="CPF do Paciente" />
                   </div>
-                  <div class="form-group col-md-3">
+                  <div class="form-group col-md-4">
                       <label for="nome">Nome do Paciente</label>
                       <input class="form-control" name="nome" id="nome" type="text" formControlName="nome" placeholder="Nome do Paciente" />
                   </div>
-                  <div class="form-group col-md-3 text-right">
+                  <div class="form-group col-md-4 text-right">
                       <button class="btn btn-primary m-2" (click)="pesquisaGeral(formPaciente.value, true)">
                           Pesquisar
                       </button>
